--- a/style.css
+++ b/style.css
@@ -6,13 +6,26 @@
   margin: 5px;
 }
 
+.measure label {
+  font-weight: bold;
+}
+
 .number {
-  max-width: 50px;
+  max-width: 60px;
+  font-weight: bold;
 }
 
 .buttons {
-  margin-right: 10px;
-  padding-top: 5px;
+  display: flex;
+}
+
+.button {
+  margin-left: 5px;
+  margin-right: 5px;
+  font-weight: bold;
+  padding-left: 15px;
+  padding-right: 15px;
+  cursor: pointer;
 }
 
 .results {
