Change styles and add P-65 formula

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@
   border: 1px solid black;
 }
 
+#option {
+  padding: 5px;
+  margin-right: 5px;
+}
+
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
