--- a/style.css
+++ b/style.css
@@ -20,29 +20,78 @@
 }
 
 .button {
+  margin: 0;
+  padding: 0;
   margin-left: 5px;
   margin-right: 5px;
-  font-weight: bold;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 5px;
+  font-weight: bold;
   cursor: pointer;
+  border: 1px solid lightgray;
+  background-color: transparent;
+}
+
+.button:hover {
+  background-color: lightgray;
 }
 
 .results {
   margin-top: 20px;
 }
 
-.rowHead {
+.row-head {
   background-color: #dddddd;
   border: 1px solid black;
 }
 
-.colActions {
+.col-actions {
   max-width: 10px;
 }
 
-.deleteButton {
+.delete-button {
   width: 100%;
+  height: 20px;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.icon {
+  height: 15px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.icon-big {
+  height: 22px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.d-flex {
+  display: flex;
+  justify-content: center;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+}
+
+.pt-5 {
+  padding-top: 5px;
+}
+
+.mr-5 {
+  margin-right: 5px;
+}
+
+.show-md {
+  display: none;
 }
 
 #option {
@@ -77,6 +126,33 @@ thead th {
   border: 1px;
   border-color: black;
   border-style: solid;
+}
+
+@media screen and (max-width: 600px) {
+  label {
+    font-size: small;
+  }
+  td,
+  th {
+    font-size: x-small;
+  }
+
+  .icon-big {
+    height: 15px;
+  }
+
+  .button {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .hide-md {
+    display: none;
+  }
+
+  .show-md {
+    display: flex;
+  }
 }
 
 @media print {
